# GINARE-Journal-Selector

./: .gitignore  LICENSE  README.md  app.py  diagnose_specter.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
.streamlit/: config.toml
core/: __init__.py  config.py  data_loader.py  exporter.py  filters.py  overrides.py  recommender.py
data/: doaj_index.parquet  embeddings_meta.parquet  favorites.json  journals.parquet  review_times.parquet
data/doaj/cache/: 0001-6314.json  0003-9993.json  0006-8950.json  0010-9452.json  0013-9580.json  0022-510X.json  0028-3878.json  0028-3940.json  0028-4793.json  0031-9023.json  0031-9406.json  0039-2499.json  0098-7484.json  0140-6736.json  0147-006X.json  0149-7634.json  0166-2236.json  0166-4328.json  0195-6108.json  0269-2155.json  0270-6474.json  0271-678X.json  0301-0082.json  0340-5354.json  0364-5134.json  0885-3185.json  0896-6273.json  0963-8288.json  0987-7053.json  1015-9770.json  1047-3211.json  1052-3057.json  1053-8119.json  1053-8135.json  1065-9471.json  1074-9357.json  1094-7159.json  1097-6256.json  1351-5101.json  1352-4585.json  (+23 more)
data/jcr/: README.md
pipelines/: __init__.py  build_jcr_list.py  compute_embeddings.py  compute_review_times.py  expand_to_jcr.py  fetch_doaj.py  fetch_openalex.py  fetch_sherpa.py  fetch_sjr.py  run_all.py  seed_journals.py
