[project]
name = "app-eleccion-revistas"
version = "0.1.0"
description = "Recomendador de revistas científicas para envío de artículos (neurología, neurorrehabilitación, neuroimagen)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Alfredo Lerín" },
]
license = { text = "MIT" }
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.7",
    "torch>=2.2",
    "openpyxl>=3.1",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.ruff]
line-length = 100
target-version = "py310"
